# siphon-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MULTI_INSTANCE_GUIDE.md  README.md  RFC_3264_OFFER_ANSWER_IMPLEMENTATION.md  RFC_3312_PRECONDITIONS_IMPLEMENTATION.md  RFC_3325_IMPLEMENTATION.md  RFC_3327_IMPLEMENTATION.md  RFC_3420_IMPLEMENTATION.md  RFC_3428_IMPLEMENTATION.md  RFC_3551_RTP_AVP_IMPLEMENTATION.md  RFC_3556_BANDWIDTH_IMPLEMENTATION.md  RFC_3605_RTCP_ATTRIBUTE_IMPLEMENTATION.md  RFC_3680_IMPLEMENTATION.md  RFC_3824_IMPLEMENTATION.md  RFC_3856_PRESENCE_IMPLEMENTATION.md  RFC_3857_WATCHER_INFO_IMPLEMENTATION.md  RFC_3892_REFERRED_BY_IMPLEMENTATION.md  RFC_3903_PUBLISH_IMPLEMENTATION.md  RFC_4168_SCTP_IMPLEMENTATION.md  RFC_4566_SDP_IMPLEMENTATION.md  SECURITY.md  SECURITY_AUDIT.md  siphon-rs.code-workspace  users.json
.claude/: settings.local.json
bins/siphond/: Cargo.toml  EXAMPLES.md  QUICKREF.md  README.md
bins/siphond/src/: b2bua_state.rs  config.rs  dispatcher.rs  invite_state.rs  main.rs  main_old.rs  metrics_http.rs  proxy_state.rs  proxy_utils.rs  scenario.rs  sdp_utils.rs  services.rs  transport.rs
bins/siphond/src/handlers/: bye.rs  cancel.rs  info.rs  invite.rs  message.rs  mod.rs  notify.rs  options.rs  prack.rs  refer.rs  register.rs  subscribe.rs  update.rs
bins/siphond/tests/: refer_integration.rs
crates/sip-auth/: Cargo.toml
crates/sip-auth/src/: lib.rs
crates/sip-core/: Cargo.toml
crates/sip-core/src/: addr_headers.rs  auth.rs  caller_preferences.rs  capabilities.rs  contact.rs  cpim.rs  date.rs  event.rs  geolocation.rs  headers.rs  history_info.rs  lib.rs  max_forwards.rs  message_waiting.rs  method.rs  mime.rs  msg.rs  name_addr.rs  p_headers.rs  presence.rs  priority.rs  privacy.rs  reason.rs  refer_sub.rs  referred_by.rs  reg_event.rs  replaces.rs  resource_priority.rs  route.rs  rseq.rs  rtp_avp.rs  sdp.rs  sdp_offer_answer.rs  security.rs  service_route.rs  session_timer.rs  sip_etag.rs  sipfrag.rs  subject.rs  tel_uri.rs  (+5 more)
crates/sip-core/tests/: tel_uri_integration.rs  uri_property_tests.rs
crates/sip-dialog/: Cargo.toml
crates/sip-dialog/examples/: prack_and_session_timers.rs
crates/sip-dialog/src/: lib.rs  metrics.rs  prack_validator.rs  session_timer_manager.rs  storage.rs
crates/sip-dns/: Cargo.toml  README.md
crates/sip-dns/examples/: dns_resolution.rs
crates/sip-dns/src/: enum_lookup.rs  lib.rs
crates/sip-dns/tests/: resolver_tests.rs
crates/sip-hep/: Cargo.toml
crates/sip-hep/src/: emitter.rs  headers.rs  lib.rs
crates/sip-hep/tests/: emit.rs
crates/sip-identity/: Cargo.toml
crates/sip-identity/src/: chain.rs  error.rs  header.rs  lib.rs  passport.rs  verify.rs
crates/sip-observe/: Cargo.toml
crates/sip-observe/src/: lib.rs
crates/sip-parse/: Cargo.toml  README.md
crates/sip-parse/proptest-regressions/: lib.txt
crates/sip-parse/src/: header_values.rs  lib.rs
crates/sip-proxy/: Cargo.toml
crates/sip-proxy/examples/: stateful_proxy_forking.rs
crates/sip-proxy/src/: cancel_ack.rs  lib.rs  location.rs  service.rs  stateful.rs
crates/sip-ratelimit/: Cargo.toml  README.md
crates/sip-ratelimit/src/: lib.rs
crates/sip-registrar/: Cargo.toml
crates/sip-registrar/src/: lib.rs
crates/sip-sdp/: Cargo.toml
crates/sip-sdp/examples/: b2bua_profile.rs  offer_answer_negotiation.rs  profile_offer_answer.rs
crates/sip-sdp/src/: attrs.rs  builder.rs  lib.rs  negotiate.rs  parse.rs  profiles.rs  serialize.rs
crates/sip-sdp/tests/: corpus_negotiation.rs
crates/sip-testkit/: Cargo.toml
crates/sip-testkit/examples/: flows.rs
crates/sip-testkit/src/: lib.rs
crates/sip-testkit/tests/: integration_tests.rs
crates/sip-transaction/: Cargo.toml  README.md
crates/sip-transaction/examples/: metrics_demo.rs  timer_behavior.rs
crates/sip-transaction/src/: fsm.rs  lib.rs  manager.rs  metrics.rs  sharding.rs  storage.rs  timers.rs
crates/sip-transaction/tests/: branch_property_tests.rs  transaction_tests.rs  transport_aware_timer_tests.rs
crates/sip-transport/: Cargo.toml
crates/sip-transport/src/: lib.rs  pool.rs
crates/sip-transport/tests/: hep_tcp.rs  hep_udp.rs  tls_swap.rs  ws.rs
crates/sip-uac/: Cargo.toml
crates/sip-uac/examples/: attended_transfer.rs  blind_transfer.rs  call_transfer_scenario.rs  integrated_call_flow.rs  invite_call_flow.rs  late_offer_flow.rs  prack_flow.rs  register_with_auth.rs  tel_uri_flow.rs
crates/sip-uac/src/: auth_utils.rs  integrated.rs  lib.rs
crates/sip-uas/: Cargo.toml
crates/sip-uas/examples/: handle_invite.rs  integrated_server.rs
crates/sip-uas/src/: integrated.rs  lib.rs
crates/sip-uas/tests/: dialog_tracking.rs
docs/: CHANGELOG.md  RFC_2976_INFO_IMPLEMENTATION.md  RFC_3264_OFFER_ANSWER_IMPLEMENTATION.md  RFC_3312_PRECONDITIONS_IMPLEMENTATION.md  RFC_3323_IMPLEMENTATION.md  RFC_3325_IMPLEMENTATION.md  RFC_3326_IMPLEMENTATION.md  RFC_3327_IMPLEMENTATION.md  RFC_3329_IMPLEMENTATION.md  RFC_3361_IMPLEMENTATION.md  RFC_3407_CAPABILITY_DECLARATION_IMPLEMENTATION.md  RFC_3420_IMPLEMENTATION.md  RFC_3428_IMPLEMENTATION.md  RFC_3524_SRF_IMPLEMENTATION.md  RFC_3551_RTP_AVP_IMPLEMENTATION.md  RFC_3556_BANDWIDTH_IMPLEMENTATION.md  RFC_3605_RTCP_ATTRIBUTE_IMPLEMENTATION.md  RFC_3608_IMPLEMENTATION.md  RFC_3680_IMPLEMENTATION.md  RFC_3824_IMPLEMENTATION.md  RFC_3840_IMPLEMENTATION.md  RFC_3841_IMPLEMENTATION.md  RFC_3842_IMPLEMENTATION.md  RFC_3856_PRESENCE_IMPLEMENTATION.md  RFC_3857_WATCHER_INFO_IMPLEMENTATION.md  RFC_3860_CPIM_IMPLEMENTATION.md  RFC_3890_TIAS_IMPLEMENTATION.md  RFC_3891_REPLACES_IMPLEMENTATION.md  RFC_3892_REFERRED_BY_IMPLEMENTATION.md  RFC_3903_PUBLISH_IMPLEMENTATION.md  RFC_4028_IMPLEMENTATION.md  RFC_4168_SCTP_IMPLEMENTATION.md  RFC_4320_NON_INVITE_IMPLEMENTATION.md  RFC_4488_REFER_SUB_IMPLEMENTATION.md  RFC_4566_SDP_IMPLEMENTATION.md  SIP_TIMER_REVIEW.md  (+3 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_cpim.rs  parse_headers.rs  parse_request.rs  parse_response.rs  parse_uri.rs  parse_via.rs  serialize_roundtrip.rs
(+47 files in other folders)
