[workspace]
members = [
    "bins/siphond",
    "crates/sip-core",
    "crates/sip-parse",
    "crates/sip-transport",
    "crates/sip-transaction",
    "crates/sip-dns",
    "crates/sip-dialog",
    "crates/sip-auth",
    "crates/sip-registrar",
    "crates/sip-proxy",
    "crates/sip-uas",
    "crates/sip-uac",
    "crates/sip-sdp",
    "crates/sip-observe",
    "crates/sip-testkit",
    "crates/sip-ratelimit",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["siphon-rs contributors"]
repository = "https://github.com/yourusername/siphon-rs"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
smol_str = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rand = "0.8"
dashmap = "5"
parking_lot = "0.12"
once_cell = "1.19"
httpdate = "1.0"
