[package]
name = "siphond"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
bytes = { workspace = true }
anyhow = { workspace = true }
sip-transport = { path = "../../crates/sip-transport", features = ["tls"] }
sip-parse = { path = "../../crates/sip-parse" }
sip-core = { path = "../../crates/sip-core" }
sip-observe = { path = "../../crates/sip-observe" }
sip-transaction = { path = "../../crates/sip-transaction" }
sip-dialog = { path = "../../crates/sip-dialog" }
sip-auth = { path = "../../crates/sip-auth" }
sip-registrar = { path = "../../crates/sip-registrar" }
sip-proxy = { path = "../../crates/sip-proxy" }
sip-uas = { path = "../../crates/sip-uas" }
sip-uac = { path = "../../crates/sip-uac" }
sip-ratelimit = { path = "../../crates/sip-ratelimit" }
clap = { version = "4", features = ["derive"] }
smol_str = { workspace = true }
async-trait = "0.1"
rand = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio-rustls = { version = "0.25", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = ["tls"]
tls = ["tokio-rustls", "webpki-roots"]
ws = ["sip-transport/ws"]
webrtc = ["ws"]
