[package]
name = "siphond"
version = "0.4.3"
edition = "2021"
license.workspace = true
description = "Multi-mode SIP testing daemon."
readme = "README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = { workspace = true }
anyhow = { workspace = true }
sip-transport = { path = "../../crates/sip-transport", features = ["tls"] }
sip-parse = { path = "../../crates/sip-parse" }
sip-core = { path = "../../crates/sip-core" }
sip-observe = { path = "../../crates/sip-observe" }
sip-transaction = { path = "../../crates/sip-transaction" }
sip-dialog = { path = "../../crates/sip-dialog" }
sip-auth = { path = "../../crates/sip-auth" }
sip-registrar = { path = "../../crates/sip-registrar" }
sip-proxy = { path = "../../crates/sip-proxy" }
sip-uas = { path = "../../crates/sip-uas" }
sip-uac = { path = "../../crates/sip-uac" }
sip-sdp = { path = "../../crates/sip-sdp" }
sip-ratelimit = { path = "../../crates/sip-ratelimit" }
clap = { version = "4", features = ["derive"] }
smol_str = { workspace = true }
async-trait = "0.1"
rand = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio-rustls = { version = "0.25", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = ["tls"]
tls = ["tokio-rustls", "webpki-roots"]
ws = ["sip-transport/ws"]
webrtc = ["ws"]
