[package]
name = "sip-auth"
version = "0.2.2"
edition = "2021"
license.workspace = true
description = "Digest authentication for SIP (RFC 7616/7617)."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
smol_str = { workspace = true }
sip-core = { path = "../sip-core" }
sip-ratelimit = { path = "../sip-ratelimit" }
rand = { workspace = true }
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
bytes = { workspace = true }
sip-parse = { path = "../sip-parse" }
tracing = { workspace = true }
dashmap = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
bytes = { workspace = true }
