[package]
name = "sip-core"
version = "0.6.6"
edition = "2021"
license.workspace = true
description = "Core SIP types, headers, URIs, and message primitives."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
bytes = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true }
percent-encoding = "2.3"
httpdate = "1.0"

[dev-dependencies]
proptest = "1"
