[package]
name = "sip-dialog"
version = "0.3.0"
edition = "2021"
license.workspace = true
description = "SIP dialog and subscription management."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
sip-core = { path = "../sip-core" }
dashmap = { workspace = true }
sip-parse = { path = "../sip-parse" }
smol_str = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
