[package]
name = "sip-dns"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
smol_str = { workspace = true }
sip-core = { path = "../sip-core" }
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime", "system-config"] }
tokio = { workspace = true }
rand = { workspace = true }
async-trait = "0.1"
