[package]
name = "sip-dns"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "RFC 3263 DNS resolution for SIP."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
smol_str = { workspace = true }
sip-core = { path = "../sip-core" }
# TODO: Migrate to hickory-resolver when a stable release is available (0.26+ expected).
# trust-dns-resolver 0.23 is the last stable release before the rename to hickory-dns.
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime", "system-config"] }
tokio = { workspace = true }
rand = { workspace = true }
async-trait = "0.1"
