[package]
name = "sip-identity"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "STIR/SHAKEN caller identity: RFC 8224 Identity header + RFC 8225 PASSporT (parsing; verification to follow)."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
serde_json = "1"
