[package]
name = "sip-identity"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "STIR/SHAKEN caller identity: RFC 8224 Identity header + RFC 8225 PASSporT parsing + ES256 signature verification."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1"
base64 = "0.22"
# ES256 (ECDSA P-256 + SHA-256) signature verification. `ring` is already
# in the workspace tree via rustls (sip-transport); its FIXED variant
# consumes the 64-byte r‖s JOSE signature form directly.
ring = "0.17"

[dev-dependencies]
serde_json = "1"
