[package]
name = "sip-identity"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "STIR/SHAKEN caller identity: RFC 8224 Identity header + RFC 8225 PASSporT parsing, ES256 verification, and X.509 chain validation."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1"
base64 = "0.22"
# ES256 (ECDSA P-256 + SHA-256) signature verification. `ring` is already
# in the workspace tree via rustls (sip-transport); its FIXED variant
# consumes the 64-byte r‖s JOSE signature form directly.
ring = "0.17"
# X.509 chain validation of the signing certificate against the STI-PA
# trust anchors. `rustls-webpki` (imported as `webpki`) is already in the
# tree via rustls; the `ring` feature selects the ring crypto backend (not
# aws-lc-rs) to match the rest of the workspace.
rustls-webpki = { version = "0.103", default-features = false, features = ["std", "alloc", "ring"] }
# Cert/time types webpki operates on (CertificateDer, UnixTime, TrustAnchor).
rustls-pki-types = "1"

[dev-dependencies]
serde_json = "1"
# Test-only: generate a throwaway CA + leaf chain to exercise validation.
rcgen = "0.13"
time = "0.3"
