[package]
name = "sip-observe"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "Observability, tracing, and metrics for SIP."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
once_cell = { workspace = true }
tracing = { workspace = true }
