[package]
name = "sip-proxy"
version = "0.2.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
sip-core = { path = "../sip-core" }
sip-transaction = { path = "../sip-transaction" }
bytes = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
dashmap = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }
