[package]
name = "sip-ratelimit"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Configurable rate limiting for SIP applications"
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
dashmap = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time"] }
