[package]
name = "sip-registrar"
version = "0.2.1"
edition = "2021"
license.workspace = true
description = "REGISTER handling and location service for SIP."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
smol_str = { workspace = true }
sip-core = { path = "../sip-core" }
sip-ratelimit = { path = "../sip-ratelimit" }
dashmap = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytes = { workspace = true }
sip-parse = { path = "../sip-parse" }
sip-auth = { path = "../sip-auth" }
tracing = { workspace = true }
rand = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
