[package]
name = "sip-sdp"
version = "0.2.1"
edition = "2021"
license.workspace = true
description = "SDP models and helpers for SIP."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
smol_str = { workspace = true }
nom = "7"
