[package]
name = "sip-testkit"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
bytes = { workspace = true }
sip-core = { path = "../sip-core" }
sip-parse = { path = "../sip-parse" }
smol_str = { workspace = true }
proptest = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
