[package]
name = "sip-transaction"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
sip-core = { path = "../sip-core" }
smol_str = { workspace = true }
rand = { workspace = true }
sip-parse = { path = "../sip-parse" }
bytes = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
async-trait = "0.1"
tracing = { workspace = true }
sip-transport = { path = "../sip-transport" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = "1"
