[package]
name = "sip-transport"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tokio-rustls = { version = "0.25", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
sip-observe = { path = "../sip-observe" }
memchr = "2.7"
dashmap = { workspace = true }

[features]
default = []
tls = ["tokio-rustls", "rustls", "rustls-pemfile"]
