[package]
name = "sip-transport"
version = "0.2.0"
edition = "2021"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tokio-rustls = { version = "0.25", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
sip-observe = { path = "../sip-observe" }
memchr = "2.7"
dashmap = { workspace = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }
socket2 = "0.5"

[dev-dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { version = "0.21" }

[features]
default = []
tls = ["tokio-rustls", "rustls", "rustls-pemfile"]
ws = ["tokio-tungstenite", "futures-util"]
