[package]
name = "sip-transport"
version = "0.3.0"
edition = "2021"
license.workspace = true
description = "SIP transport layer for UDP, TCP, and TLS."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pki-types = { version = "1.2", optional = true }
sip-observe = { path = "../sip-observe" }
memchr = "2.7"
dashmap = { workspace = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }
socket2 = "0.5"

[dev-dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { version = "0.21" }
tempfile = "3"

[features]
default = []
tls = ["tokio-rustls", "rustls", "rustls-pki-types"]
ws = ["tokio-tungstenite", "futures-util"]
