[package]
name = "sip-uac"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
sip-core = { path = "../sip-core" }
sip-parse = { path = "../sip-parse" }
sip-transport = { path = "../sip-transport" }
sip-auth = { path = "../sip-auth" }
sip-dialog = { path = "../sip-dialog" }
tokio = { workspace = true }
bytes = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
urlencoding = "2.1"
