[package]
name = "sip-uac"
version = "0.3.2"
edition = "2021"
license.workspace = true
description = "User Agent Client helpers for SIP."
readme = "../../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
sip-core = { path = "../sip-core" }
sip-parse = { path = "../sip-parse" }
sip-transport = { path = "../sip-transport" }
sip-auth = { path = "../sip-auth" }
sip-dialog = { path = "../sip-dialog" }
sip-dns = { path = "../sip-dns" }
sip-transaction = { path = "../sip-transaction" }
sip-sdp = { path = "../sip-sdp" }
tokio = { workspace = true, features = ["sync"] }
bytes = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
urlencoding = "2.1"
async-trait = { workspace = true }
sha1 = "0.10"
hex = "0.4"
