[package]
name = "sip-uas"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
sip-core = { path = "../sip-core" }
sip-parse = { path = "../sip-parse" }
sip-dialog = { path = "../sip-dialog" }
sip-auth = { path = "../sip-auth" }
sip-transaction = { path = "../sip-transaction" }
sip-transport = { path = "../sip-transport" }
bytes = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
